--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,56 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>uzimaru.dev</title>
+    <link href="./style.scss" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <h1>デブじゃな〜い</h1>
+    <div id="main">
+      <header>
+        <div>
+          <div class="svg-wrapper">
+            <svg
+              width="309"
+              height="411"
+              viewBox="0 0 309 411"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M309 253.039C309 340.279 239.828 411 154.5 411C69.172 411 0 340.279 0 253.039C0 165.8 69.172 0 154.5 0C239.828 0 309 165.8 309 253.039ZM154.5 385C226.573 385 285 322.57 285 246.793C278 171 226.5 31.5 154.5 27C97.4906 31.3853 53.5139 120.96 34.2286 195L69.5 182L98 220.5L149 165.5L186 210.5L149 177L98 249L63 210.5L26.9883 228.5C25.9091 234.92 25.0762 241.047 24.5 246.793C24.5 322.57 82.4268 385 154.5 385Z"
+              />
+            </svg>
+          </div>
+        </div>
+        <div>Info</div>
+        <div>Contact</div>
+      </header>
+      <article>
+        <section>
+          <div class="dock">
+            <div class="app">
+              <div class="tooltip">Terminal</div>
+              <img src="assets/terminal.svg" />
+            </div>
+            <div class="app">
+              <div class="tooltip">React</div>
+              <img src="assets/react.svg" />
+            </div>
+            <div class="app active">
+              <div class="tooltip">Elm</div>
+              <img src="assets/elm.svg" />
+            </div>
+            <div class="app">
+              <div class="tooltip">Vue</div>
+              <img src="assets/vue.svg" />
+            </div>
+          </div>
+        </section>
+      </article>
+    </div>
   </body>
 </html>
